--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
 VITE_APP_TITLE=Development Environment
-VITE_APP_API_URL=https://t.api.novel.kafan321.com/
+VITE_APP_API_URL=https://t.api.novel.kafan321.com
+VITE_APP_VERIFY_KEY=4d6bdb8c07ef66e2152303942126ba04
