--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,4 @@
 VITE_APP_TITLE=Production Environment
 VITE_APP_API_URL=http://127.0.0.1:8080
+
+VITE_APP_VERIFY_KEY=2d2e3b50bf1bf4d0768fc1a9a459c6d5
