--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
   "dependencies": {
     "@vueuse/core": "^10.9.0",
     "axios": "^1.6.7",
+    "js-md5": "^0.8.3",
     "lodash": "^4.17.21",
+    "nanoid": "^5.0.6",
     "pinia": "^2.1.7",
     "vant": "^4.8.5",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@iconify/vue": "^4.1.1",
     "@types/node": "^20.11.24",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
