--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@vueuse/core": "^10.9.0",
     "axios": "^1.6.7",
+    "event-source-polyfill": "^1.0.31",
+    "gsap": "^3.12.5",
     "js-md5": "^0.8.3",
     "lodash": "^4.17.21",
     "nanoid": "^5.0.6",
@@ -24,6 +26,7 @@
   },
   "devDependencies": {
     "@iconify/vue": "^4.1.1",
+    "@types/event-source-polyfill": "^1.0.5",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.11.24",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
