--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,3 @@
 VITE_APP_TITLE=Production Environment
-VITE_APP_API_URL=http://127.0.0.1:8080
-
-VITE_APP_VERIFY_KEY=2d2e3b50bf1bf4d0768fc1a9a459c6d5
+VITE_APP_API_URL=https://api.novel.kafan321.com
+VITE_APP_VERIFY_KEY=4d6bdb8c07ef66e2152303942126ba04
