--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
-VITE_APP_TITLE=Development Environment
-VITE_APP_API_URL=https://api.novel.kafan321.com/api/v1/
+VITE_APP_TITLE=小说推文测试
+VITE_APP_API_URL=https://api.novel.kafan321.com/api/v1
 VITE_APP_VERIFY_KEY=4d6bdb8c07ef66e2152303942126ba04
 VITE_APP_IMAGE_RESIZE=x-oss-process=image/resize,m_fill,w_300,h_300,limit_0/auto-orient,1/quality,q_90
 VITE_APP_MUTUAL_TRANSITION=true
